Move local zone classes into correct package